<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hafidrf.awesomeapp.ui.main.MainActivity">

    <item
        android:id="@+id/action_grid"
        android:title="@string/change_to_grid"
        android:icon="@drawable/ic_grid"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_list"
        android:title="@string/change_to_list"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom" />

</menu>